cluster/apps/keycloak/postgres/networkpolicies/cloudnative-pg-egress-keycloak-postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg-egress-keycloak-postgres
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
      app.kubernetes.io/instance: cloudnative-pg
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres-17
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
