cluster/apps/keycloak/postgres/networkpolicies/minio-ingress-keycloak-postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-keycloak-postgres
  namespace: minio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres-17
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
