cluster/apps/keycloak/postgres/networkpolicies/postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-postgres
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: keycloak-psql
      cnpg.io/podRole: instance
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: minio
            app.kubernetes.io/instance: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            app.kubernetes.io/instance: cloudnative-pg
            "k8s:io.kubernetes.pod.namespace": cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: keycloak
            component: keycloak
            "k8s:io.kubernetes.pod.namespace": keycloak
        # when joining, we need to allow the joining pod to connect to the instance
        # - matchLabels:
        #     cnpg.io/cluster: keycloak-psql
        #     cnpg.io/jobRole: join
        #     "k8s:io.kubernetes.pod.namespace": keycloak
        # allow the instance to connect to itself
        # - matchLabels:
        #     cnpg.io/cluster: keycloak-psql
        #     cnpg.io/podRole: instance
        #     "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
        - ports:
            - port: "8000" # /healthz endpoint
              protocol: TCP
