cluster/apps/keycloak/postgres/networkpolicies/prometheus-egress-keycloak-postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-keycloak-postgres
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres-17
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
